--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "MONGO_URI": "mongodb://localhost/dev",
   "GOOGLE_MAPS_API_KEY": "AIzaSyCCpoL1X4USVMybdJMV1bGsJo9YC4dn9uc",
   "WIT_ACCESS_TOKEN": "RPBGIPF5BAG5NEEKX27KHET5V6UBN5BL",
-  "MICROSOFT_APP_ID": "597049a6-aed4-4fee-b2b2-3b5eb7ab383e",
-  "MICROSOFT_APP_PASSWORD": "rdmhEQA98//nzdFRKL401=>"
+  "MICROSOFT_APP_ID": "3f9c3cb9-98d9-4406-92f4-9f9fe58ef5d2",
+  "MICROSOFT_APP_PASSWORD": "xbJKMSE61$#kolobFN035{["
 }
